# simple-poly

./: CMakeLists.txt  README.md  justfile
gazprea-opt/: CMakeLists.txt  gazprea-opt.cpp
gazprea-plugin/: CMakeLists.txt  gazprea-plugin.cpp
gazprea-translate/: CMakeLists.txt  gazprea-translate.cpp
include/Gazprea/: CMakeLists.txt  Gazprea.td  GazpreaDialect.h  GazpreaDialect.td  GazpreaOps.h  GazpreaOps.td  GazpreaPasses.h  GazpreaPasses.td  GazpreaTypes.h  GazpreaTypes.td
lib/Gazprea/: CMakeLists.txt  GazpreaDialect.cpp  GazpreaOps.cpp  GazpreaPasses.cpp  GazpreaTypes.cpp
python/: CMakeLists.txt  StandaloneExtension.cpp
python/mlir_standalone/dialects/: StandaloneOps.td  standalone.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Gazprea/: dummy.mlir  gazprea-add-convert.mlir  gazprea-ops.mlir  gazprea-opt.mlir  gazprea-pass-plugin.mlir  gazprea-plugin.mlir  gazprea-struct.mlir  gazprea-translate.mlir  gazprea-type.mlir  hoisting.mlir
test/python/: smoketest.py
